fix(tablet): adjust budget overview spacing

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -308,10 +308,16 @@ body {
   border-radius: 0.4rem;
   align-self: flex-end;
 }
+.remaining-budget-overview-pie-chart {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+}
 .remaining-budget-overview {
   display: flex;
   flex-direction: column;
-  gap: 0.6rem;
+  gap: 0.2rem;
+  width: 50%;
 }
 .most-used-budgets {
   display: flex;
